# RaspberryMoveDetect

./: BGMain_Raspberry.cpp  CMakeCache.txt  CMakeLists.txt  README.md
config/: VideoCapture_config.xml
